# URST-mpy

./: .gitignore  Makefile  README.md  URST-Specification.md  package.json  pyproject.toml  pyrightconfig.json  release.sh
docs/: URST-codec-native-performance.md  URST-footprint-reduction.md  URST-performance-improvements.md  URST-publish-to-micropython-lib.md  releasing.md
examples/: config.example.py  expect_echo.py  main.py  micropython_example.py  minimum.py  xbee_setup.py  xbee_setup_from_device.py
examples/tests/: test_examples_minimum.py
src/urst/: __init__.py  codec_layer.py  core_handler.py  protocol_layer.py
tests/: sanity_tests.py  test_codec.py  test_constants.py  test_core_handler.py  test_protocol.py
urst/: __init__.py  codec_layer.py  constants.py  core_handler.py  protocol_layer.py  transport_layer.py
