[project]
name = "urst"
version = "1.0.1"
description = "MicroPython implementation of the Universal Reliable Serial Transport protocol [URST](https://github.com/simonl65/URST-Specification/blob/main/URST-Specification.md)"
readme = "README.md"
license = "SUL-1.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Simon R. Lincoln", email = "oss@codeability.co.uk" }]
requires-python = ">=3.12"
dependencies = ["pyserial>=3.5"]

[build-system]
requires = ["uv_build>=0.11.19"]
build-backend = "uv_build"

[tool.uv_build]
package-dir = ""
[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "uv-build>=0.11.19"]


# --- Ruff ---
[tool.ruff]
src = ["urst"]
line-length = 80
target-version = "py312"
exclude = ["build", "dist", ".venv", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes errors
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear bug-hunting (e.g., bare except)
    "SIM", # flake8-simplify
    "S",   # security
    "I",   # isort imports
]
ignore = ["E501", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# --- Pytest ---
[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["urst"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
